--- a/linker.html
+++ b/linker.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hi</h1>
-    <a href="lab1/welcome.html">click here to lab1</a>
+    <a href="lab1/01lab.html">click here to lab1</a>
 </body>
 </html>
